[package]
name = "adventofcode-2023"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "day1_part1"
path = "src/day1_part1.rs"

[[bin]]
name = "day1_part2"
path = "src/day1_part2.rs"

[[bin]]
name = "day2_part1"
path = "src/day2_part1.rs"

[[bin]]
name = "day2_part2"
path = "src/day2_part2.rs"

[[bin]]
name = "day3_part1"
path = "src/day3_part1.rs"

[[bin]]
name = "day3_part2"
path = "src/day3_part2.rs"

[[bin]]
name = "day4_part1"
path = "src/day4_part1.rs"

[[bin]]
name = "day4_part2"
path = "src/day4_part2.rs"

[[bin]]
name = "day5_part1"
path = "src/day5_part1.rs"

[[bin]]
name = "day5_part2"
path = "src/day5_part2.rs"

[[bin]]
name = "day6_part1"
path = "src/day6_part1.rs"

[[bin]]
name = "day6_part2"
path = "src/day6_part2.rs"

[[bin]]
name = "day7_part1"
path = "src/day7_part1.rs"

[[bin]]
name = "day7_part2"
path = "src/day7_part2.rs"

[[bin]]
name = "day8_part1"
path = "src/day8_part1.rs"

[[bin]]
name = "day8_part2"
path = "src/day8_part2.rs"

[[bin]]
name = "day9_part1"
path = "src/day9_part1.rs"

[[bin]]
name = "day9_part2"
path = "src/day9_part2.rs"

[[bin]]
name = "day10_part1"
path = "src/day10_part1.rs"

[[bin]]
name = "day10_part2"
path = "src/day10_part2.rs"

[dependencies]
anyhow = "1.0"
